# mina

./: .gitignore  BACKEND_STATUS.md  CODE_REVIEW.md  CURSOR_INSTRUCTIONS.md  CURSOR_INSTRUCTIONS_COMPLIANCE.md  IMPLEMENTATION_STATUS.md  README.md  REMAINING_WORK.md  WARNINGS_FIXED.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  ws.rs
src-tauri/src/commands/: ai.rs  analytics.rs  api_keys.rs  auth.rs  automation.rs  config.rs  data_export.rs  devops.rs  economic_calendar.rs  embeddings.rs  global_search.rs  grid_layouts.rs  market_data.rs  messaging.rs  migration.rs  mod.rs  network.rs  notifications.rs  ollama.rs  osint.rs  packages.rs  portfolio.rs  price_alerts.rs  process.rs  projects.rs  rate_limit.rs  stock_news.rs  system.rs  system_utils.rs  temporal.rs  testing.rs  vector_search.rs  vector_store.rs  ws.rs
src-tauri/src/data/: mod.rs  sentiment_words.rs
src-tauri/src/providers/: economic_calendar.rs  homebrew.rs  market_data.rs  mod.rs  network.rs  ollama.rs  process.rs  system.rs  system_utils.rs
src-tauri/src/services/: alert_channels.rs  alert_escalation_checker.rs  alert_escalator.rs  alert_rule_engine.rs  analytics_collector.rs  api_key_manager.rs  automation_event_bus.rs  command_dispatcher.rs  command_registry.rs  data_export.rs  desktop_notifications.rs  economic_calendar.rs  embeddings.rs  event_bridge.rs  global_search.rs  health_check_service.rs  health_checker.rs  market_cache.rs  market_data_stream.rs  mod.rs  news_aggregator.rs  (+9 more)
(+190 files in other folders)
