[package]
name = "mina"
version = "0.1.0"
description = "MINA - Comprehensive System Assistant & Monitoring Platform"
authors = ["haudraufpaul"]
edition = "2021"

[lib]
name = "mina_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.30"
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
async-trait = "0.1"
sha2 = "0.10"
tokio-stream = "0.1"
notify = "6"
rss = "2.0"
scraper = "0.19"
futures = "0.3"
aes-gcm = "0.10"
pbkdf2 = "0.12"
base64 = "0.21"
rand = "0.8"
regex = "1"

